cmake_minimum_required(VERSION 2.8.11)

set(Hecmw_SOURCES
common/hecmw_ablex.c
common/hecmw_bin_io.c
common/hecmw_bit_array.c
common/hecmw_comm.c
common/hecmw_conn_conv.c
common/hecmw_control.c
common/hecmw_control_f.f90
common/hecmw_ctrllex.c
common/hecmw_debug_write_dist.c
common/hecmw_dist.c
common/hecmw_dist_alloc.c
common/hecmw_dist_copy_c2f.c
common/hecmw_dist_copy_c2f_f.f90
common/hecmw_dist_copy_f2c.c
common/hecmw_dist_copy_f2c_f.f90
common/hecmw_dist_free.c
common/hecmw_dist_free_f.f90
common/hecmw_dist_print.c
common/hecmw_dist_print_f.f90
common/hecmw_dist_refine.c
common/hecmw_error.c
common/hecmw_etype.c
common/hecmw_etype_f.f90
common/hecmw_finalize.c
common/hecmw_geometric.c
common/hecmw_gflex.c
common/hecmw_hash.c
common/hecmw_heclex.c
common/hecmw_init.c
common/hecmw_io.f90
common/hecmw_io_abaqus.c
common/hecmw_io_dist.c
common/hecmw_io_geofem.c
common/hecmw_io_get_mesh.c
common/hecmw_io_get_mesh_if.c
common/hecmw_io_hec.c
common/hecmw_io_mesh.c
common/hecmw_io_nastran_dummy.c
common/hecmw_io_put_mesh.c
common/hecmw_lib_fc.c
common/hecmw_log.c
common/hecmw_logging.f90
common/hecmw_malloc.c
common/hecmw_map_int.c
common/hecmw_msg.c
common/hecmw_msg_f.f90
common/hecmw_msg_table.c
common/hecmw_msgno_f.f90
common/hecmw_path.c
common/hecmw_put_mesh_if.c
common/hecmw_reorder.c
common/hecmw_restart.c
common/hecmw_restart_f.f90
common/hecmw_result.c
common/hecmw_result_copy_c2f.c
common/hecmw_result_copy_f2c.c
common/hecmw_result_f.f90
common/hecmw_set_int.c
common/hecmw_system.c
common/hecmw_time.c
common/hecmw_ucd_print.c
common/hecmw_util.c
common/hecmw_util_f.F90
common/hecmw_varray_int.c
common/hecmw_visual_if.c
common/hecmw_visualizer_f.f90
hecmw/hecmw.f90
solver/communication/hecmw_comm_f.F90
solver/communication/hecmw_solver_SR_11.F90
solver/communication/hecmw_solver_SR_11i.F90
solver/communication/hecmw_solver_SR_22.F90
solver/communication/hecmw_solver_SR_22i.F90
solver/communication/hecmw_solver_SR_33.F90
solver/communication/hecmw_solver_SR_33i.F90
solver/communication/hecmw_solver_SR_44.F90
solver/communication/hecmw_solver_SR_44i.F90
solver/communication/hecmw_solver_SR_66.F90
solver/communication/hecmw_solver_SR_66i.F90
solver/communication/hecmw_solver_SR_mm.F90
solver/communication/hecmw_solver_SR_mmi.F90
solver/communication/hecmw_solver_misc.f90
solver/init/hecmw_solve_error.f90
solver/init/hecmw_solve_init.f90
solver/matrix/hecmw_allocate.f90
solver/matrix/hecmw_local_matrix.f90
solver/matrix/hecmw_mat_ass.f90
solver/matrix/hecmw_mat_con.f90
solver/matrix/hecmw_matrix_contact.f90
solver/matrix/hecmw_matrix_dump.f90
solver/matrix/hecmw_matrix_misc.f90
solver/matrix/hecmw_matrix_ordering_CM.f90
solver/matrix/hecmw_matrix_ordering_MC.f90
solver/matrix/hecmw_matrix_reorder.f90
solver/solver_11/hecmw_solver_11.f90
solver/solver_11/hecmw_solver_CG_11.f90
solver/solver_11/hecmw_solver_las_11.f90
solver/solver_22/hecmw_solver_22.f90
solver/solver_22/hecmw_solver_BLCG_22.f90
solver/solver_22/hecmw_solver_CG_22.f90
solver/solver_22/hecmw_solver_las_22.f90
solver/solver_33/hecmw_ML_helper.f90
solver/solver_33/hecmw_ML_wrapper.c
solver/solver_33/hecmw_estimate_condition.F90
solver/solver_33/hecmw_jadm.f90
solver/solver_33/hecmw_mat_id.f90
solver/solver_33/hecmw_precond_33.f90
solver/solver_33/hecmw_precond_BILU_33.f90
solver/solver_33/hecmw_precond_DIAG_33.f90
solver/solver_33/hecmw_precond_ML_33.f90
solver/solver_33/hecmw_precond_RIF_33.f90
solver/solver_33/hecmw_precond_SAINV_33.f90
solver/solver_33/hecmw_precond_SSOR_33.f90
solver/solver_33/hecmw_solver_33.f90
solver/solver_33/hecmw_solver_BiCGSTAB_33.f90
solver/solver_33/hecmw_solver_CG_33.f90
solver/solver_33/hecmw_solver_GMRES_33.f90
solver/solver_33/hecmw_solver_GPBiCG_33.f90
solver/solver_33/hecmw_solver_las_33.f90
solver/solver_33/hecmw_solver_scaling_33.f90
solver/solver_33/hecmw_tuning_fx.f90
solver/solver_44/hecmw_jadm_44.f90
solver/solver_44/hecmw_precond_44.f90
solver/solver_44/hecmw_precond_BILU_44.f90
solver/solver_44/hecmw_precond_DIAG_44.f90
solver/solver_44/hecmw_precond_SSOR_44.f90
solver/solver_44/hecmw_solver_44.f90
solver/solver_44/hecmw_solver_BiCGSTAB_44.f90
solver/solver_44/hecmw_solver_CG_44.f90
solver/solver_44/hecmw_solver_las_44.f90
solver/solver_44/hecmw_solver_scaling_44.f90
solver/solver_66/hecmw_precond_66.f90
solver/solver_66/hecmw_precond_BILU_66.f90
solver/solver_66/hecmw_precond_DIAG_66.f90
solver/solver_66/hecmw_precond_SSOR_66.f90
solver/solver_66/hecmw_solver_66.f90
solver/solver_66/hecmw_solver_CG_66.f90
solver/solver_66/hecmw_solver_las_66.f90
solver/solver_66/hecmw_solver_scaling_66.f90
solver/solver_direct/hecmw_solver_direct.f90
solver/solver_direct_clustermkl/hecmw_ClusterMKL_wrapper.F90
solver/solver_direct_clustermkl/hecmw_solver_direct_ClusterMKL.f90
solver/solver_direct_lag/hecmw_solver_direct_serial_lag.f90
solver/solver_direct_lag/m_child_matrix_lag.f90
solver/solver_direct_lag/m_crs_matrix_lag.f90
solver/solver_direct_lag/m_irjc_matrix_lag.f90
solver/solver_direct_lag/my_hecmw_util_f_lag.f90
solver/solver_direct_mumps/hecmw_MUMPS_wrapper.F90
solver/solver_direct_mumps/hecmw_solver_direct_MUMPS.f90
solver/solver_direct_parallel/hecmw_solver_direct_parallel.F90
solver/solver_direct_parallel/m_child_matrix.f90
solver/solver_direct_parallel/m_crs_matrix.f90
solver/solver_direct_parallel/m_elap.F90
solver/solver_direct_parallel/m_irjc_matrix.f90
solver/solver_direct_parallel/m_matrix_partition_info.f90
solver/solver_direct_parallel/matrix2graph.c
solver/solver_direct_parallel/matrix_repart.c
solver/solver_direct_parallel/mem_util.c
solver/solver_direct_parallel/separator_c2f_c.c
solver/sparse_matrix/sparse_matrix.f90
solver/sparse_matrix/sparse_matrix_hec.f90
visualizer/hecmw_fstr_output_femap.c
visualizer/hecmw_vis_calc_attr.c
visualizer/hecmw_vis_case_table.c
visualizer/hecmw_vis_color_composite_sf.c
visualizer/hecmw_vis_color_composite_vr.c
visualizer/hecmw_vis_color_mapping.c
visualizer/hecmw_vis_color_mapping.c
visualizer/hecmw_vis_combine.c
visualizer/hecmw_vis_comm_util.c
visualizer/hecmw_vis_comm_util.c
visualizer/hecmw_vis_connectivity_build.c
visualizer/hecmw_vis_define_parameters.c
visualizer/hecmw_vis_define_parameters.c
visualizer/hecmw_vis_endian.c
visualizer/hecmw_vis_font_texture.c
visualizer/hecmw_vis_font_texture.c
visualizer/hecmw_vis_generate_histogram_sf.c
visualizer/hecmw_vis_generate_histogram_vr.c
visualizer/hecmw_vis_intersection_find.c
visualizer/hecmw_vis_mem_util.c
visualizer/hecmw_vis_mem_util.c
visualizer/hecmw_vis_mesh_extent.c
visualizer/hecmw_vis_new_refine.c
visualizer/hecmw_vis_patch_const.c
visualizer/hecmw_vis_pvr_main.c
visualizer/hecmw_vis_ray_trace.c
visualizer/hecmw_vis_read_control.c
visualizer/hecmw_vis_read_voxel.c
visualizer/hecmw_vis_rendering.c
visualizer/hecmw_vis_subimage_composite_sf.c
visualizer/hecmw_vis_subimage_composite_vr.c
visualizer/hecmw_vis_surface_compute.c
visualizer/hecmw_vis_surface_main.c
visualizer/hecmw_vis_tetra_intersect.c
visualizer/hecmw_vis_ucd_trans.c
visualizer/hecmw_vis_voxel_gen.c
visualizer/hecmw_visualizer.c
)

add_library(hecmw ${Hecmw_SOURCES})
