###############################################################################
# Copyright (c) 2019 FrontISTR Commons
# This software is released under the MIT License, see License.txt
###############################################################################

add_subdirectory(common)
add_subdirectory(solver)
add_subdirectory(hecmw)
add_subdirectory(visualizer)
add_subdirectory(operations/element_smoothing)

