###############################################################################
# Copyright (c) 2021 FrontISTR Commons
# This software is released under the MIT License, see License.txt
###############################################################################

add_subdirectory(hec2rcap)
add_subdirectory(partitioner)
add_subdirectory(result_file_merger)
add_subdirectory(result_type_converter)
add_subdirectory(visualizer)
