###############################################################################
# Copyright (c) 2019 FrontISTR Commons
# This software is released under the MIT License, see License.txt
###############################################################################

add_subdirectory(dynamic)
add_subdirectory(heat)
add_subdirectory(static)
